--- a/components/navbar.html
+++ b/components/navbar.html
@@ -40,11 +40,11 @@
             
             <ul class="navbar-nav">
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         <i class="fas fa-user me-1"></i>
                         Admin
                     </a>
-                    <ul class="dropdown-menu">
+                    <ul class="dropdown-menu dropdown-menu-end">
                         <li><a class="dropdown-item" href="#" onclick="toggleSeason()">
                             <i class="fas fa-sync me-2"></i>
                             Toggle Season
@@ -57,6 +57,11 @@
                         <li><a class="dropdown-item" href="#" onclick="resetMockData()">
                             <i class="fas fa-redo me-2"></i>
                             Reset Data
+                        </a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item text-danger" href="#" onclick="logout()">
+                            <i class="fas fa-sign-out-alt me-2"></i>
+                            Logout
                         </a></li>
                     </ul>
                 </li>
