--- a/components/sidebar.html
+++ b/components/sidebar.html
@@ -102,7 +102,7 @@
     <div class="filter-group">
         <button class="btn btn-primary w-100 btn-apply-filters" id="applyFiltersBtn" onclick="applyFilters()">
             <i class="fas fa-filter me-2"></i>
-            Apply Filters
+            Apply
         </button>
     </div>
     
@@ -110,7 +110,7 @@
     <div class="filter-group">
         <button class="btn btn-outline-secondary w-100" onclick="clearFilters()">
             <i class="fas fa-times me-2"></i>
-            Clear Filters
+            Clear 
         </button>
     </div>
     
